[package]
name = "downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
dirs = "5.0"             # for finding Downloads folder
mime_guess = "2.0"       # for guessing extension from Content-Type
url = "2.5"
